# ai-harness-course

./: .d-check.yml  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md
.github/workflows/: checks.yml  templates-release.yml  templates-zip.yml
kurs/de/: README.md  agents-digest.md  agents-regelwerk.md
kurs/de/00-einfuehrung/: README.md  hello-harness.md  modul-00-einfuehrung.md
kurs/de/01-spec-und-architektur/: README.md  modul-01-entwicklungszyklus.md  modul-02-harness-bootstrap.md  modul-02-lastenheft.md  modul-03-architektur-adrs.md  modul-03-lastenheft.md  modul-04-architektur-adrs.md
kurs/de/02-planung/: README.md  modul-04-planning-harness.md  modul-05-planning-harness.md  modul-05-roadmap.md  modul-06-carveouts.md  modul-06-roadmap.md  modul-07-carveouts.md
kurs/de/03-agenten/: README.md  modul-07-agentenrollen.md  modul-08-agentenrollen.md  modul-08-implementierung.md  modul-09-implementierung.md
kurs/de/04-qualitaet/: README.md  modul-09-review-harness.md  modul-10-review-harness.md  modul-10-verification.md  modul-11-replay-evaluierung.md  modul-11-verification.md  modul-12-quality-gates.md  modul-12-replay-evaluierung.md  modul-13-quality-gates.md
kurs/de/05-betrieb/: README.md  modul-13-docker-harness.md  modul-14-docker-harness.md  modul-14-observability.md  modul-15-observability.md  modul-15-produktiver-betrieb.md  modul-16-produktiver-betrieb.md
kurs/de/abschluss/: README.md  abschlussprojekt.md  kalibrierungsbeispiele.md  quellen.md
kurs/de/grundlagen/: README.md  checkpoints.md  draft-bootstrap-zielbild.md  durchsetzungsschicht.md  fallstudien.md  kickoff-vorlauf.md  klassifikation.md  konventionen.md  konzeptkarte.md  lernervorstellungen.md  lernpfade.md  reflexion-vorlage.md  selbstcheck-rubrik.md
kurs/de/loesungen/: README.md  modul-00-loesung.md  modul-01-loesung.md  modul-02-loesung.md  modul-03-loesung.md  modul-04-loesung.md  modul-05-loesung.md  modul-06-loesung.md  modul-07-loesung.md  modul-08-loesung.md  modul-09-loesung.md  modul-10-loesung.md  modul-11-loesung.md  modul-12-loesung.md  modul-13-loesung.md  modul-14-loesung.md  modul-15-loesung.md  modul-16-loesung.md
kurs/en/: README.md
lab/: README.md
lab/example/: AGENTS.md  Makefile  README.md
lab/example/cpp/: .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md
lab/example/cpp/cmake/: Dependencies.cmake  arch-check.sh  suppression-gate.sh
lab/example/cpp/harness/: README.md
lab/example/cpp/src/: CMakeLists.txt  main.cpp
lab/example/cpp/src/adapters/: CMakeLists.txt
lab/example/cpp/src/adapters/embedding/: mock_embedder.cpp  mock_embedder.h
lab/example/cpp/src/adapters/ui/: search_handler.cpp  search_handler.h
lab/example/cpp/src/hexagon/: CMakeLists.txt
lab/example/cpp/src/hexagon/index/: index.cpp  index.h
lab/example/cpp/src/hexagon/model/: types.h
lab/example/cpp/src/hexagon/ports/: embedder_port.h
lab/example/cpp/src/hexagon/service/: searcher.cpp  searcher.h
lab/example/cpp/tests/: CMakeLists.txt  search_test.cpp
lab/example/csharp/: .editorconfig  AGENTS.md  Directory.Build.props  Directory.Packages.props  DocSearch.sln  Dockerfile  Makefile  README.md  coverlet.runsettings
lab/example/docs/: glossar.md
lab/example/evals/: example-trace.json
lab/example/python/: AGENTS.md  Dockerfile  Makefile  README.md  importlinter.cfg  pyproject.toml
lab/example/python/harness/: README.md
lab/example/python/src/docsearch/: __init__.py  __main__.py
lab/example/python/src/docsearch/embedding/: __init__.py  embedder.py
lab/example/python/src/docsearch/index/: __init__.py  index.py
lab/example/python/src/docsearch/service/: __init__.py  search.py
lab/example/python/src/docsearch/types/: __init__.py
lab/example/python/src/docsearch/ui/: __init__.py
lab/example/python/tests/: test_service.py
lab/regelwerk/: README.md  modul-00-einfuehrung.md  modul-01-entwicklungszyklus.md  modul-02-harness-bootstrap.md  modul-03-lastenheft.md  modul-04-architektur-adrs.md  modul-05-planning-harness.md  modul-06-roadmap.md  modul-07-carveouts.md  modul-08-agentenrollen.md  modul-09-implementierung.md  modul-10-review-harness.md  modul-11-verification.md  modul-12-replay-evaluierung.md  modul-13-quality-gates.md  modul-14-docker-harness.md  modul-15-observability.md  modul-16-produktiver-betrieb.md
lab/templates/: AGENTS.template.md  Makefile  README.md  harness.mk  project-readme.template.md
tools/: Dockerfile  README.md  alignment-check.js  docs-check.js  rewrite-doc-links.py  rewrite-template-links.sh
(+119 files in other folders)
