[project]
name = "docsearch"
version = "0.3.0"
description = "DocSearch — Lab-Skelett (Python)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsearch"]

# Ruff: Linter inkl. noqa-Gate (AGENTS.md §P-1).
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
# Wir blockieren noqa-Marker: die Per-File-Ignores leben hier mit
# Begründung. Inline `# noqa` ist verboten und wird durch ein
# eigenes Pre-commit-Hook (oder externes noqa-gate-Tool) geprüft.
[tool.ruff.lint.per-file-ignores]
# Beispiel mit Begründung:
# "tests/*.py" = ["E501"]  # tests dürfen lange Strings haben (slice-013)

# mypy --strict
[tool.mypy]
strict = true
files = ["src/docsearch"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
